// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Snapshots No Children 1`] = `
<ul
  className="sc-gsTCUz cWkiwX"
>
  <li
    className="sc-bdfBwQ cNiGdI"
  />
</ul>
`;

exports[`Alert Snapshots No props 1`] = `
<ul
  className="sc-gsTCUz cWkiwX"
>
  <li
    className="sc-bdfBwQ cNiGdI"
  >
    One ListElement
  </li>
  <li
    className="sc-bdfBwQ cNiGdI"
  >
    Another List Element
  </li>
</ul>
`;
